# rust-ocean-rpc

./: .travis.yml  CHANGELOG.md  README.md
client/: CHANGELOG.md  Cargo.toml  README.md
client/examples/: retry_client.rs  test_against_node.rs
client/src/: client.rs  error.rs  lib.rs  queryable.rs
json/: Cargo.toml  README.md
json/src/: getters.rs  lib.rs
