[package]
name = "ocean-rpc"
version = "0.3.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "Nikolaos Kostoulas <nikolaos@commerceblock.com>"
]
license = "CC0-1.0"
homepage = "https://github.com/commerceblock/rust-ocean-rpc/"
repository = "https://github.com/commerceblock/rust-ocean-rpc/"
description = "RPC client library for the Ocean JSON-RPC API."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc", "ocean", "elements" ]
readme = "README.md"

[lib]
name = "ocean_rpc"
path = "src/lib.rs"

[dependencies]
ocean-rpc-json = { version = "0.3", path = "../json" }
rust-ocean = { git = "https://github.com/commerceblock/rust-ocean"}

log = "0.4.5"
jsonrpc = "0.11"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"
hex = "0.3"

# Used for Bitcoin-specific types.
bitcoin = { version = "0.18", features = [ "use-serde" ] }

bitcoin_hashes = "0.3"
bitcoin-amount = { version = "0.1.4", features = [ "serde" ] }
secp256k1 = { version = "0.12", features = [ "serde" ] }
num-bigint = { version = "0.2", features = [ "serde" ] }
