[package]
name = "ocean-rpc-json"
version = "0.3.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "Nikolaos Kostoulas <nikolaos@commerceblock.com>"
]
license = "CC0-1.0"
homepage = "https://github.com/commerceblock/rust-ocean-rpc/"
repository = "https://github.com/commerceblock/rust-ocean-rpc/"
description = "JSON-enabled type structs for ocean-rpc crate."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc", "ocean", "elements" ]
readme = "README.md"

[lib]
name = "ocean_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
hex = "0.3"

bitcoin = { version = "0.17", features = [ "serde-decimal" ] }
bitcoin_hashes = "0.3"
bitcoin-amount = { version = "0.1.4", features = [ "serde" ] }
secp256k1 = { version = "0.12", features = [ "serde" ] }
num-bigint = { version = "0.2", features = [ "serde" ] }
