[package]
name = "ocean-rpc-json"
version = "0.8.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "Nikolaos Kostoulas <nikolaos@commerceblock.com>"
]
license = "CC0-1.0"
homepage = "https://github.com/commerceblock/rust-ocean-rpc/"
repository = "https://github.com/commerceblock/rust-ocean-rpc/"
description = "JSON-enabled type structs for ocean-rpc crate."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc", "ocean", "elements" ]
readme = "README.md"

[lib]
name = "ocean_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
hex = "0.3"
rust-ocean = { git = "https://github.com/commerceblock/rust-ocean", features = ["serde-feature"] }
bitcoin = { version = "0.19.1", features = [ "use-serde" ] }
num-bigint = { version = "0.2", features = [ "serde" ] }
